<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_normal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                tools:text="gender" />

            <TextView
                android:id="@+id/birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_year"
                tools:text="birth_year" />

            <TextView
                android:id="@+id/homeworld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeworld"
                tools:text="homeworld" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                tools:text="height" />

            <TextView
                android:id="@+id/mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass"
                tools:text="mass" />

            <TextView
                android:id="@+id/hair_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair_color"
                tools:text="hair_color" />

            <TextView
                android:id="@+id/skin_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skin_color"
                tools:text="skin_color" />

            <TextView
                android:id="@+id/eye_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eye_color"
                tools:text="eye_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include android:id="@+id/starship_list" layout="@layout/list_placeholder" />

            <include android:id="@+id/film_list" layout="@layout/list_placeholder" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
