<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/radio_selector_selected"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        android:id="@+id/starship_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starship_name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/starship_name" />

    <TextView
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/model" />

    <TextView
        android:id="@+id/manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/manufacturer" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost_in_credits"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cost_in_credits" />

</LinearLayout>